[gd_scene load_steps=13 format=3 uid="uid://b31235e0u2xgr"]

[ext_resource type="Script" uid="uid://dlqrgsuf6e0ms" path="res://components/player/player.gd" id="1_7504e"]
[ext_resource type="Script" uid="uid://bollm4j4b3kdp" path="res://components/player/hud.gd" id="2_lt7w0"]
[ext_resource type="Theme" uid="uid://3pf2keh4y56m" path="res://components/player/hud.tres" id="2_yxufj"]
[ext_resource type="PackedScene" uid="uid://bdb8cs4xscb5m" path="res://components/weapon/weapon_scene.tscn" id="4_xh4xr"]
[ext_resource type="Script" uid="uid://bwgd13rtk8ahm" path="res://components/player/state_machine.gd" id="5_eglpv"]
[ext_resource type="Script" uid="uid://dk8hjl1nfajy8" path="res://components/player/idle_player_state.gd" id="6_5u2jg"]
[ext_resource type="Script" uid="uid://5nk44o5so0pj" path="res://components/player/running_player_state.gd" id="7_5u2jg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yrsj2"]

[sub_resource type="Animation" id="Animation_eglpv"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_xh4xr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbsqm"]
_data = {
&"Crouch": SubResource("Animation_eglpv"),
&"RESET": SubResource("Animation_xh4xr")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_xh4xr"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("HUD", "COLLIDER", "PIVOT_Y", "PIVOT_X", "EYE", "WEAPON", "PROJECTILE_START_POINT", "ANIMATION_PLAYER", "SHAPE_CAST", "SLIDE_TIMER")]
top_level = true
collision_layer = 4
collision_mask = 7
script = ExtResource("1_7504e")
HUD = NodePath("Hud")
COLLIDER = NodePath("Collider")
PIVOT_Y = NodePath("PivotY")
PIVOT_X = NodePath("PivotY/PivotX")
EYE = NodePath("PivotY/PivotX/Eye")
WEAPON = NodePath("PivotY/PivotX/Eye/Weapon")
PROJECTILE_START_POINT = NodePath("PivotY/PivotX/Eye/Projectile Start Point")
ANIMATION_PLAYER = NodePath("AnimationPlayer")
SHAPE_CAST = NodePath("ShapeCast3D")
SLIDE_TIMER = NodePath("SlideTimer")

[node name="Hud" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("2_lt7w0")

[node name="HealthBar" type="Control" parent="Hud"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="HealthLeft" type="ProgressBar" parent="Hud/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 166.0
offset_bottom = 27.0
grow_horizontal = 2
theme = ExtResource("2_yxufj")
value = 100.0
show_percentage = false

[node name="HealthRight" type="ProgressBar" parent="Hud/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_bottom = 27.0
grow_horizontal = 2
theme = ExtResource("2_yxufj")
value = 100.0
fill_mode = 1
show_percentage = false

[node name="HealthLabel" type="Label" parent="Hud/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 23.0
grow_horizontal = 2
text = "VALUE"
horizontal_alignment = 1

[node name="Crosshair" type="TextureRect" parent="Hud"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.483
anchor_top = 0.469
anchor_right = 0.517
anchor_bottom = 0.531
offset_left = -0.416016
offset_top = 0.0879822
offset_right = 0.415955
offset_bottom = -0.0880127
grow_horizontal = 2
grow_vertical = 2

[node name="Velocity" type="Control" parent="Hud"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="meter" type="ProgressBar" parent="Hud/Velocity"]
layout_mode = 0
offset_right = 35.0
offset_bottom = 120.0
fill_mode = 2
show_percentage = false

[node name="value" type="Label" parent="Hud/Velocity"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="Update" type="Timer" parent="Hud"]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="PivotY" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="PivotX" type="Node3D" parent="PivotY"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Eye" type="Camera3D" parent="PivotY/PivotX"]
transform = Transform3D(1, 0, -2.53697e-16, 0, 1, 0, 2.53697e-16, 0, 1, 0, 0, 0)
fov = 90.0

[node name="Weapon" parent="PivotY/PivotX/Eye" instance=ExtResource("4_xh4xr")]

[node name="Projectile Start Point" type="Marker3D" parent="PivotY/PivotX/Eye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.740192)

[node name="Collider" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape3D_yrsj2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lbsqm")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_xh4xr")
target_position = Vector3(0, 1, 0)

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_eglpv")
CURRENT_STATE = NodePath("IdlePlayerState")
metadata/_custom_type_script = "uid://bwgd13rtk8ahm"

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_5u2jg")
metadata/_custom_type_script = "uid://dqbwgnib6bvjm"

[node name="RunningPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_5u2jg")
metadata/_custom_type_script = "uid://dqbwgnib6bvjm"

[connection signal="crosshair" from="PivotY/PivotX/Eye/Weapon" to="Hud" method="set_crosshair"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
